; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/32x/extr_pwm.c_p32x_pwm_state_loaded.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/32x/extr_pwm.c_p32x_pwm_state_loaded.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@SekCycleCnt = common dso_local global i32 0, align 4
@Pico32x = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@pwm_cycles = common dso_local global i32 0, align 4
@pwm_irq_reload = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @p32x_pwm_state_loaded() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 (...) @p32x_pwm_ctl_changed()
  %3 = load i32, i32* @SekCycleCnt, align 4
  %4 = mul nsw i32 %3, 3
  %5 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @Pico32x, i32 0, i32 0), align 4
  %6 = sub nsw i32 %4, %5
  store i32 %6, i32* %1, align 4
  %7 = load i32, i32* %1, align 4
  %8 = load i32, i32* @pwm_cycles, align 4
  %9 = icmp sge i32 %7, %8
  br i1 %9, label %13, label %10

10:                                               ; preds = %0
  %11 = load i32, i32* %1, align 4
  %12 = icmp slt i32 %11, 0
  br i1 %12, label %13, label %19

13:                                               ; preds = %10, %0
  %14 = load i32, i32* @pwm_irq_reload, align 4
  store i32 %14, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @Pico32x, i32 0, i32 1), align 4
  %15 = load i32, i32* @SekCycleCnt, align 4
  %16 = mul nsw i32 %15, 3
  store i32 %16, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @Pico32x, i32 0, i32 0), align 4
  %17 = load i32, i32* @SekCycleCnt, align 4
  %18 = call i32 @p32x_pwm_schedule(i32 %17)
  br label %19

19:                                               ; preds = %13, %10
  ret void
}

declare dso_local i32 @p32x_pwm_ctl_changed(...) #1

declare dso_local i32 @p32x_pwm_schedule(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
